# Transportation-Shipment-ETL-Pipeline

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: base.yaml  dev.yaml  logging.yaml  prod.yaml
config/schemas/: carriers.schema.json  delivery_events.schema.json  shipments.schema.json
config/spark/: emr.conf  local.conf
data/sample/raw/: carriers_2026-01-01.csv  delivery_events_2026-01-01.csv  shipments_2026-01-01.csv
data/sample/reference/: region_lookup.csv
deploy/emr/bootstrap/: bootstrap.sh
deploy/emr/conf/: emr_configurations.json  spark_defaults.conf
docs/: architecture.md  curated_tables.md  data_dictionary.md  emr_run_instructions.md  kpi_definitions.md  testing_plan.md
sql/curated/: agg_shipment_daily.sql  dim_carrier.sql  fct_delivery_event.sql  fct_shipment.sql
sql/kpi/: kpi_delivery_daily.sql
sql/quality/: duplicate_checks.sql  null_checks.sql  reconciliation_checks.sql
sql/staging/: stg_carriers.sql  stg_delivery_events.sql  stg_shipments.sql
src/transport_etl/: __init__.py  main.py
src/transport_etl/common/: dates.py  (+6 more)
tests/: conftest.py
tests/data_quality/: test_curated_nulls.py  test_curated_uniqueness.py  test_rowcount_reconciliation.py
tests/integration/: test_daily_job_local.py  test_hive_partition_writes.py
tests/sql/: test_kpi_sql_results.py
tests/unit/: test_build_fct_shipment.py  test_build_kpi_delivery_daily.py  test_config.py  test_duplicate_rules.py  test_main_cli.py  test_null_rules.py  test_schema_drift.py
(+40 files in other folders)
